feat(PRD-38): implement user-gyakorlat crud
